started on information lookup

--- a/index.html
+++ b/index.html
@@ -212,10 +212,9 @@
 
 
         <!-- //////////// MEETUP (PHASE 2/4) //////////// -->
-
         <div id="meetup-instructions" class="text-box-medium" style="display:none">
             <div class="title-container">
-                <div><b>Instructions: </b>As a team, you will compare the environmental differences:</div>
+                <div><b>Instructions: </b>As a team, you will compare the environment between:</div>
                 <div class="large-year-text dynamic-text"></div>
             </div>
             <div>There are three questions to complete. We have also provided you with additional information about these time periods.</div>
@@ -231,7 +230,7 @@
 
         <div id="note-response" class="text-box-large" style="display:none">
             <div class="title-container">
-                <div><b>Instructions: </b>As a team, you will compare the environmental differences between:</div>
+                <div><b>Instructions: </b>As a team, you will compare the environment between:</div>
                 <div class="large-year-text dynamic-text"></div>
             </div>
             <div>Discuss the following with your group members and record your answer below. Please note that only one person per group should submit an answer, otherwise your answer will be lost</div>
@@ -242,7 +241,31 @@
             <button class="done-button note-button button"><b>Done</b></button>
         </div>
 
- 
+        <!-- GUIDE -->
+        <div id="information-lookup-overview" class="text-box-large" style="display:none">
+            <div class="title-container">
+                <div><b>Instructions: </b>As a team, you will compare the environment between:</div>
+                <div class="large-year-text dynamic-text"></div>
+            </div>
+            <div>Your assignment at this location is to look up information about these time periods. Select a time period below to begin.</div>
+            <img class="time-period-image-1 time-period-image" src="assets/information_lookup_images/200mya_640x320.png">
+            <img class="time-period-image-2 time-period-image" src="assets/information_lookup_images/200mya_640x320.png">
+            <button class="small-button button"><b>Back</b></button>
+        </div>
+
+        <div id="information-lookup-year" class="text-box-large" style="display:none">
+            <div class="title-container">
+                <div><b>Time: </b><span class="time dynamic-text"></span></div>
+                <div><b>Instructions: </b>Click an outlined component in the image to read more about it.</div>
+            </div>
+            <div class="lookup-text dynamic-text"></div>
+            <!-- image-button -->
+            <button class="small-button button"><b>Back</b></button>
+        </div>
+        <!-- probably change me to div START HERE -->
+        <img id="clickable-rainforest-image" src="assets/information_lookup_images/200mya_augmented.png" style="display:none"></img>
+        
+
         <!-- //////////// EXPLANATION / OPEN INQUIRY (PHASE 5) //////////// -->
         <div id="explanation-instructions" class="text-box-medium" style="display:none">
             <div class="title-container">
