4 new lookup images, lookup 200mya complete

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
         <div id="information-lookup-container" style="display:none">
             <img id="clickable-rainforest-image" src="assets/information_lookup_images/200mya/200mya_augmented.png"></img>
-            <div id="organisms-go-here">
+            <div id="clickable-organism-container">
             </div>
 <!--             <div id="organism-dinosaur" class="organism-image-container" data-organism="dinosaur">
                 <img class="image-button image-button-off" src="assets/information_lookup_images/200mya/dinosaur_white.png"></img>
@@ -273,9 +273,6 @@
                 <img class="image-button image-button-off" src="assets/information_lookup_images/200mya/dinosaur_white.png"></img>
                 <img class="image-button image-button-on" src="assets/information_lookup_images/200mya/dinosaur_blue.png" style="display:none"></img>
             </div> -->
-
-
-            <div id="lookup-text" class="highlighted-text">None selected.</div>
         </div>  
 
         
