Showing toast message to inform user about picture upload start and finish

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="js/sail.js/css/sail.css" rel="stylesheet" type="text/css" />
     <link href="css/deps/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="css/evoroom.css" rel="stylesheet" type="text/css" />
+    <link type="text/css" href="css/deps/jquery.toastmessage.css" rel="stylesheet">
 
     <script src="js/sail.js/load.js" type="text/javascript"></script>
     <script src="js/sail.js/sail.js" type="text/javascript"></script>
