CSSing of the info lookup complete (thanks Alisa) and icon name changes

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 <br />
                 <div>When you are done, another organism will be assigned to you until all of the organisms are complete.</div>
             </div>
-            <button class="small-button button" style="display:none">Next</button>
+            <button class="small-button button" >Next</button>
+            <!-- style="display:none" -->
         </div>
 
         <div id="guide-instructions-1" class="text-box-medium" style="display:none">
