user_phase and phases_completed integrated up to explanation

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                 <br />
                 <div>When you are done, another organism will be assigned to you until all of the organisms are complete.</div>
             </div>
-            <button class="small-button button" >Next</button>
-            <!-- style="display:none" -->
+            <button class="small-button button" style="display:none">Next</button>
         </div>
 
         <div id="guide-instructions-1" class="text-box-medium" style="display:none">
@@ -132,8 +131,7 @@
                 <br />
                 <div>Once the activity begins, a "Next" button will appear. This gives you access to a specialty field guide that has been created to assist you with this task.</div>
             </div>
-            <button class="small-button button">Next</button>
-             <!-- style="display:none" -->
+            <button class="small-button button" style="display:none">Next</button>
         </div>
 
 
