fixed bugs 2 and 2.5

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <br />
                 <div>Your teacher will take you "back in time" so that you can collect evidence related to your organism's evolution, e.g. by writing a note, taking a photo, interviewing colleagues.</div>
             </div> 
-            <button class="small-button button"><b>Next</b></button>
+            <button class="small-button button" style="display:none"><b>Next</b></button>
         </div>
 
         <div id="explanation-organism-assigned" class="text-box-medium" style="display:none">
