Time from phase now shown in HTML

--- a/index.html
+++ b/index.html
@@ -307,12 +307,15 @@
                 <div><b>Steps:</b>
                     <ol>
                         <li>Review cladogram
+                            <br />
                             <img class="picture-capture cladogram-picture" src="../assets/images/take_source_photo.png"/>
                         </li>
                         <li>Review rainforest
+                            <br />
                             <img class="picture-capture rainforest-picture" src="../assets/images/take_source_photo.png"/>
                         </li>
                         <li>Review additional information
+                            <br />
                             <img class="picture-capture additional-picture" src="../assets/images/take_source_photo.png"/>
                         </li>
                     </ol>
@@ -332,23 +335,23 @@
                             <label for="explanation-response-coevolution">Coevolution</label>
                         </li>
                         <li>
-                            <input type="checkbox" name="evolutionary-force" id="explanation-response-founder-effect" value="founder-effect" />
+                            <input type="checkbox" name="evolutionary-force" id="explanation-response-founder-effect" value="founder_effect" />
                             <label for="explanation-response-founder-effect">Founder effect</label>
                         </li>
                         <li>
-                            <input type="checkbox" name="evolutionary-force" id="explanation-response-gene-flow" value="gene-flow" />
+                            <input type="checkbox" name="evolutionary-force" id="explanation-response-gene-flow" value="gene_flow" />
                             <label for="explanation-response-gene-flow">Gene flow</label>
                         </li>
                         <li>
-                            <input type="checkbox" name="evolutionary-force" id="explanation-response-natural-selection" value="natural-selection" />
+                            <input type="checkbox" name="evolutionary-force" id="explanation-response-natural-selection" value="natural_selection" />
                             <label for="explanation-response-natural-selection">Natural selection</label>
                         </li>
                         <li>
-                            <input type="checkbox" name="evolutionary-force" id="explanation-response-reproductive-isolation" value="reproductive-isolation" />
+                            <input type="checkbox" name="evolutionary-force" id="explanation-response-reproductive-isolation" value="reproductive_isolation" />
                             <label for="explanation-response-reproductive-isolation">Reproductive isolation</label>
                         </li>
                         <li>
-                            <input type="checkbox" name="evolutionary-force" id="explanation-response-sexual-selection" value="sexual-selection" />
+                            <input type="checkbox" name="evolutionary-force" id="explanation-response-sexual-selection" value="sexual_selection" />
                             <label for="explanation-response-sexual-selection">Sexual selection</label>
                         </li>
                         <li>
