--- a/teacher.html
+++ b/teacher.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
     <title>Teacher Dashboard - Day 1 - EvoRoom3</title>
 
     <link href="js/sail.js/css/sail.css" rel="stylesheet" type="text/css" />
@@ -23,12 +25,7 @@
             .thenRun(function() { return Sail.init(new EvoRoom.Teacher()); });  
     </script>
 </head>
-<body>
-    <header>
-        <div class="progressbar">
-        </div>
-    </header>
-    
+<body>    
     <table class="teacher-dashboard" style="visibility: hidden">
         <tr class="phase phase-0 phase-orientation" data-phase="orientation">
             <th>0. Orientation</th>
