can now advance through time periods in open inquiry phase

--- a/teacher.html
+++ b/teacher.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <title>Teacher Dashboard - Day 1 - EvoRoom3</title>
 
     <link href="js/sail.js/css/sail.css" rel="stylesheet" type="text/css" />
@@ -75,7 +76,7 @@
         <tr class="phase phase-5 phase-explanation" data-phase="explanation">
             <th>5. Open Inquiry</th>
             <td class="buttons">
-                <button class="start-phase next-time-period teacher-button-faded">Start Next Time Period &raquo;</button>
+                <button class="start-phase next-time-period teacher-button-faded">Start Open Inquiry &raquo;</button>
             </td>
             <td class="students">
             </td>
