user_phase now controls time HTML

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <br />
                 <div>If you are the first in your team to finish, take this time to review the cladogram.</div>
             </div>
-            <button class="small-button button"><b>Next</b></button><!-- style="display:none" -->
+            <button class="small-button button" style="display:none"><b>Next</b></button>
         </div>
 
 
