show objectives for teacher for Rotation I and Meetup I

--- a/teacher.html
+++ b/teacher.html
@@ -41,6 +41,7 @@
             <th>1. Rotation I</th>
             <td class="buttons">
                 <button class="start-phase teacher-button-faded">Start Rotation I</button>
+                <div class="objective" id="obs-count"><span class="count">0</span> of 120 observations</div>
             </td>
             <td class="students">
             </td>
@@ -50,6 +51,7 @@
             <th>2. Meetup I</th>
             <td class="buttons">
                 <button class="start-phase teacher-button-faded">Start Meetup I</button>
+                <div class="objective" id="notes-count"><span class="count">0</span> of 9 notes</div>
             </td>
             <td class="students" colspan="2">
             </td>
