--- a/teacher.html
+++ b/teacher.html
@@ -61,6 +61,7 @@
             <th>3. Rotation II</th>
             <td class="buttons">
                 <button class="start-phase teacher-button-faded">Start Rotation II</button>
+                <div class="objective" id="obs-count2"><span class="count">0</span> of 240 observations</div>
             </td>
             <td class="students">
             </td>
