show notes count for Meetup II

--- a/teacher.html
+++ b/teacher.html
@@ -71,6 +71,7 @@
             <th>4. Meetup II</th>
             <td class="buttons">
                 <button class="start-phase teacher-button-faded">Start Meetup II</button>
+                <div class="objective" id="notes-count2"><span class="count">0</span> of 18 notes</div>
             </td>
             <td class="students" colspan="2">
             </td>
