--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <div id="evoroom">
-        <button id="fake-explanation">What up?</button>
+        <!-- <button id="fake-explanation">What up?</button> -->
         <div id="loading-page" class="text-box-medium" style="display:none">
             <div class="title-container"><b>Please wait...</b></div>
             <div>Fetching data from server</div>
