--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div><b>Instructions: </b>You just helped complete a survey of the organisms at <span class="time-periods-text dynamic-text"></span>. When everyone is done, you will review this information in your teams.</div>
                 <br />
                 <div>Find your team members and meet up at:</div>
-                <div class="large-year-text time dynamic-text"></div>
+                <div class="large-year-text dynamic-text"></div>
                 <br />
                 <div>Team members:</div>
                 <div class="team-members-container"></div>
