removing back button, adding more restoreState

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <br />
             <div id="question-text"></div>
             <textarea class="note-entry"></textarea>
-            <button class="back-button note-button button"><b>Back</b></button>
+            <!-- <button class="back-button note-button button"><b>Back</b></button> -->
             <button class="done-button note-button button"><b>Done</b></button>
         </div>
 
